fixed teams header not visible properly

--- a/src/css/hnc_team.scss
+++ b/src/css/hnc_team.scss
@@ -7,10 +7,11 @@
     font-weight: 600;
     /* text-decoration: underline; */
     /*   text-decoration-color: rgba(160, 70, 180, 0.8); */
-    text-decoration-thickness: 5px;
+    /* text-decoration-thickness: 5px; */
     padding: 3px;
+    color: rgb(195, 196, 255);
   }
-  mask-image: linear-gradient(
+  /*  mask-image: linear-gradient(
     to right,
     transparent -10%,
     black,
@@ -19,10 +20,10 @@
 
   -webkit-mask-image: -webkit-linear-gradient(
     to right,
-    transparent 0%,
+    transparent -10%,
     black,
-    transparent 100%
-  );
+    transparent 110%
+  ); */
 }
 
 #hncTeamCardContainer {
